--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -4,6 +4,7 @@ certifi==2023.7.22
 click==8.1.6
 dnspython==2.4.2
 email-validator==2.0.0.post2
+exceptiongroup==1.1.3
 fastapi==0.101.1
 greenlet==2.0.2
 h11==0.14.0
@@ -15,6 +16,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.5
+passlib==1.7.4
 psycopg2-binary==2.9.7
 pydantic==2.2.0
 pydantic-extra-types==2.0.0
