--- a/Mobile/SmartRiceBox/package.json
+++ b/Mobile/SmartRiceBox/package.json
@@ -26,7 +26,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/ngrok": "^4.1.0"
+    "@expo/ngrok": "^4.1.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
