--- a/Frontend/smart-rice-box/package.json
+++ b/Frontend/smart-rice-box/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/lab": "^5.0.0-alpha.145",
     "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.10",
+    "@mui/styles": "^5.14.10",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,13 +22,15 @@
     "react-map-gl": "^7.1.6",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "eslintConfig": {
     "extends": [
