--- a/Mobile/SmartRiceBox/app.json
+++ b/Mobile/SmartRiceBox/app.json
@@ -33,9 +33,11 @@
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.FOREGROUND_SERVICE"
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.CAMERA"
       ],
-      "package": "com.sonnguyen112.SmartRiceBox"
+      "package": "com.sonnguyen112.SmartRiceBox",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
