--- a/Mobile/SmartRiceBox/package.json
+++ b/Mobile/SmartRiceBox/package.json
@@ -6,37 +6,40 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "dependencies": {
+    "@expo/config-plugins": "~7.2.2",
     "@expo/ngrok": "^2.4.3",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.5.0",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "expo": "~49.0.7",
     "expo-barcode-scanner": "^12.5.3",
-    "expo-camera": "^13.4.2",
+    "expo-camera": "~13.4.4",
+    "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
     "expo-location": "^16.1.0",
     "expo-notifications": "^0.20.1",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
-    "native-notify": "^3.0.9",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.24.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-svg": "^12.5.1",
-    "react-native-webview": "^13.6.0"
+    "react-native-svg": "13.9.0",
+    "react-native-webview": "13.2.2",
+    "updates": "^15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
