--- a/Mobile/SmartRiceBox/package.json
+++ b/Mobile/SmartRiceBox/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm install --save --legacy-peer-deps"
   },
   "dependencies": {
     "@expo/ngrok": "^2.4.3",
@@ -17,6 +18,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
+    "eas-cli": "^5.3.0",
     "expo": "~49.0.7",
     "expo-barcode-scanner": "^12.5.3",
     "expo-camera": "^13.4.2",
